--- a/Strategy59CNTT2Demo/.project
+++ b/Strategy59CNTT2Demo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Strategy59CNTT2Demo</name>
+	<name>BaiMot</name>
 	<comment></comment>
 	<projects>
 	</projects>
